# Integrated_Hessians

./: .gitignore  README.md  Snakefile  documentation.typ  main.py  pyproject.toml  tmp.py  tmp_ai_generated_interaction_matrices.py  tmp_extract_additive_and_interactive_behaviour.py  tmp_pcolormesh.py
examples/motif_interactions/: 20260304121842_JASPAR2026_combined_matrices_1525959.pfm  __init__.py  run_simulation.py
src/integrated_hessians/: __init__.py  _core.py  hessian.py
src/integrated_hessians/algorithm/: just_hessian.py  relu_replacer.py
src/integrated_hessians/algorithm/strategies/: gauss_legendre.py  riemann.py  tmp.py
src/integrated_hessians/showcase/: __init__.py  compare_with_squid.py  ig_ih_notebook.py  ig_notebook.py
src/integrated_hessians/simulation/: 20260304121822_JASPAR2026_combined_matrices_1525959.jaspar  __init__.py  assign_random_roles_to_motifs.py  extract_rules.py  infer_notebook.py  model.py  plot.py  run_simulation.py  test_model.py  test_model_notebook.py  train_model.py
src/integrated_hessians/simulation/complicated_simulation/: create_simulation.py
src/integrated_hessians/simulation/configs/: custom.json  custom_expanded_distribution.json  custom_motifs.pfm  random.json  simple.json  simple_motifs.pfm
src/integrated_hessians/simulation/create_simulation_data/: custom_additive_and_interactive_effects.py  random_additive_and_interactive_effects.py  simple.py
src/integrated_hessians/simulation/custom_additive_and_interaction_effects/: create_simulation.py
src/integrated_hessians/simulation/custom_additive_and_interactive_effects/: config.py  create_simulation.py  extract_rules.py  extracted_rules_analyze.py  run_all.py  simple_motifs.pfm  test_model.py  train_model.py
src/integrated_hessians/simulation/extract_rules/: extract_rules.py  extracted_rules_analyze_custom.py
src/integrated_hessians/simulation/motifs/: random_motifs.pfm
src/integrated_hessians/simulation/plots/: heatmap.py  interaction.py  showcase.py  training_metrics.py
src/integrated_hessians/simulation/randomized_additive_and_interactive_effects/: config.py  create_simulation.py  extract_rules.py  extracted_rules_analyze.py  run_all.py  test_model.py  train_model.py
src/integrated_hessians/simulation/simple_simulation/: config.py  create_simulation.py  model.py  simple_motifs.pfm  test_model.py  train_model.py
src/integrated_hessians/simulation/test_method/: implementation_performance_comparison.json  implementation_performance_comparison.py  path_explain_wrapper.py  plot_performance_comparison.py  sample_sizes_where_target_delta_is_reached.json  (+1 more)
(+5 files in other folders)
