[project]
name = "integrated-hessians"
version = "0.1.0"
description = "Integrated hessians explains feature interactions in pytorch models."
readme = "README.md"
authors = [
    { name = "Yusuf Turhan", email = "yusufozgurtr@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "beartype>=0.22.9",
    "captum>=0.7.0",
    "dacite>=1.9.2",
    "jaxtyping>=0.3.9",
    "lightning>=2.6.1",
    "marimo>=0.20.4",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "seaborn>=0.13.2",
    "setuptools==81.0",
    "tensorboard>=2.16",
    "torch>=2.10.0",
    "torchshow>=0.5.2",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
ignore = ["F722"]
