[project]
name = "integrated-hessians"
version = "0.1.0"
description = "Integrated hessians explains feature interactions in pytorch models."
readme = "README.md"
authors = [
    { name = "Yusuf Turhan", email = "yusufozgurtr@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "beartype>=0.22.9",
    "jaxtyping>=0.3.9",
    "kipoiseq>=0.7.1",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

# added to supress errors with jaxtyping
[tool.ruff.lint]
ignore = ["F722"]

[dependency-groups]
dev = [
    "plotly[express]>=6.6.0",
    "marimo>=0.20.4",
    "captum>=0.7.0",
    "path-explain>=0.0.7",
    "tensorflow>=2.21.0",
    "squid-nn>=0.4.8",
    "logomaker>=0.8.7",
    "mavenn>=1.1.4",
    "kipoi>=0.8.6",
]
